frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: nvovap/sample-for-kuber:v2
        imagePullPolicy: Always
        name: frontend
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: passwd-volume
          readOnly: true
          mountPath: "/etc/redis-passwd"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
