static-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-site
  name: static-site
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 80
  selector:
    app: static-site
