ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: test1.nvovap.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 8081
      # NOTE: this should come after /api or else it will hijack requests
  - host: test2.nvovap.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: static-site
            port:
              number: 8082
